--- a/README
+++ b/README
@@ -7,3 +7,6 @@ Create env file first, and make changes in db connetion.
 5) php artisan ui vue --auth
 6) npm install
 7) npm run watch
+
+
+>>> php artisan migrate:refresh to migrate new table column
