--- a/README
+++ b/README
@@ -10,3 +10,4 @@ Create env file first, and make changes in db connetion.
 
 
 >>> php artisan migrate:refresh to migrate new table column
+>>> composer create-project --prefer-dist laravel/laravel laraproj (install laravel 8)
