--- a/README
+++ b/README
@@ -10,4 +10,8 @@ Create env file first, and make changes in db connetion.
 
 
 >>> php artisan migrate:refresh to migrate new table column
+
+
 >>> composer create-project --prefer-dist laravel/laravel laraproj (install laravel 8)
+>>> composer require laravel/jetstream
+>>> php artisan jetstream:install livewire
